crates/bevy_diegetic/tests/trybuild/fail/overlay_child_gap.rs
use bevy_diegetic::El;
use bevy_diegetic::In;

fn main() {
    let _ = El::overlay().child_gap(In(0.08));
}
